--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,7 +7,8 @@
 }
 
 .heading {
-  @apply mb-10 text-4xl font-black text-gray-500;
+  @apply mb-10 select-none text-4xl font-black text-gray-300 transition;
+  @apply hover:text-gray-500;
 }
 
 .loading {
