Add search icon from Feather Icons

--- a/src/components/SearchForm.module.css
+++ b/src/components/SearchForm.module.css
@@ -14,3 +14,7 @@
 .input {
   @apply pr-16;
 }
+
+.searchIconWrapper {
+  @apply absolute top-0 left-0 bottom-0 z-[1] flex w-14 items-center justify-center text-gray-500;
+}
