--- a/src/components/SearchInput.module.css
+++ b/src/components/SearchInput.module.css
@@ -1,4 +1,8 @@
 .input {
-  @apply relative block w-full max-w-full rounded-sm px-4 py-5 pl-14 text-xl font-semibold shadow-sm transition;
-  @apply focus:shadow focus:outline-none focus:ring focus:ring-gray-300;
+  @apply relative block w-full max-w-full rounded-sm bg-transparent px-4 py-5 pl-14 text-xl font-semibold shadow-sm transition;
+  @apply focus:shadow focus:outline-none focus:ring focus:ring-neutral-300;
+}
+
+:global(.dark) .input {
+  @apply focus:ring-neutral-700;
 }
