--- a/src/components/SearchForm.module.css
+++ b/src/components/SearchForm.module.css
@@ -7,8 +7,8 @@
 }
 
 .clearButton {
-  @apply absolute top-0 right-0 bottom-0 flex w-14 items-center justify-center text-gray-500;
-  @apply hover:text-gray-700;
+  @apply absolute top-0 right-0 bottom-0 flex w-14 items-center justify-center text-neutral-500;
+  @apply hover:text-neutral-700;
 }
 
 .input {
@@ -16,5 +16,9 @@
 }
 
 .searchIconWrapper {
-  @apply absolute top-0 left-0 bottom-0 z-[1] flex w-14 items-center justify-center text-gray-500;
+  @apply absolute top-0 left-0 bottom-0 z-[1] flex w-14 items-center justify-center text-neutral-500;
+}
+
+:global(.dark) .clearButton {
+  @apply hover:text-neutral-300;
 }
