--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,7 @@ body {
     'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  @apply bg-white text-neutral-900 dark:bg-neutral-900 dark:text-neutral-50;
 }
 
 code {
