--- a/src/App.module.css
+++ b/src/App.module.css
@@ -7,7 +7,8 @@
 }
 
 .heading {
-  @apply mb-10 select-none text-4xl font-black text-neutral-600;
+  @apply mb-10 select-none text-6xl text-neutral-700;
+  font-family: 'Ms Madi', cursive;
 }
 
 .loading {
